--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,6 @@
 
 	  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 	    <ul class="navbar-nav">
-	      <li class="nav-item"><a class="nav-link navbar-custom" href="#">Lit Review</a></li>
 	      <li class="nav-item dropdown">
 	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	          Training modules
@@ -19,6 +18,7 @@
 	          <li class="dropdown-item"><a href="{{site.url}}/minimalR/">minimalR</a></li>
 	        </ul>
 	      </li>
+	      <li class="nav-item"><a class="nav-link navbar-custom" href="/updates/">Updates</a></li>
 	      <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
 	    </ul>
 		</div>
