Add styling for honor roll page

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -173,3 +173,24 @@ a { color:$my-blue; }
 		margin-bottom: 20px;
 	}
 }
+
+.honor-roll {
+	.card {
+		margin-bottom: 20px;
+		padding-bottom: 10px;
+
+		h4 {
+			padding-left: 10px;
+			padding-top: 10px;
+			margin-bottom: 0px;
+		}
+		ul {
+			padding-left: 10px;
+
+			li {
+				list-style: none;
+			}
+		}
+
+	}
+}
