--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,10 @@
 	<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Lobster' rel="stylesheet">
 	<link rel="stylesheet" type='text/css' href="{{ "/resources/css/main.css" | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="{{ '/resources/css/academicons.min.css' | prepend: site.baseurl }}">
 
 	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content={% if page.description %}"{{ page.description }}"{% else %}"{{ site.description }}"{% endif %}>
