Add class to make font gray color

--- a/css/presentation.scss
+++ b/css/presentation.scss
@@ -78,6 +78,11 @@ pre {
 		margin: 10px 0;
 	}
 
+// for title slide footnote
+	.gray {
+		color: #AAA;
+	}
+
 	.blur-background img {
 		background-color: white;
 		padding: 2%;
