--- a/css/presentation.scss
+++ b/css/presentation.scss
@@ -72,6 +72,13 @@ pre {
 		line-height: 20px;
 	}
 
+	.footnote.title {
+		font-size: 20px;
+	  position: absolute;
+	  bottom: 3em;
+		line-height: 20px;
+	}
+
 	.alert {
 		color: red;
 		font-weight: 800;
