--- a/css/presentation.scss
+++ b/css/presentation.scss
@@ -29,6 +29,11 @@ pre {
 		margin: 20px 0;
 	}
 
+	h3 {
+		font-size: 40px;
+		margin: 10px 0;
+	}
+
 	h1, h2, h3 {
 	  font-family: 'Yanone Kaffeesatz';
 	  font-weight: 800;
