--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -104,6 +104,10 @@ a { color:$my-blue; }
 
 .tutorials {
 	color: $my-primary-contrast;
+	padding-left: 15px;
+	h6 {
+		font-size: 20px;
+	}
 }
 
 
