Change contrasting color

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,7 +1,7 @@
 $gray-100: #eee;
 $my-light-blue: #6D90F0;
-$my-primary-contrast: #FFAC63;
-$my-secondary-contrast: #FFE663;
+$my-primary-contrast: #d64828;
+$my-secondary-contrast: #d69f28;
 $my-blue: #2857D6;
 
 body {
