Update includes and layouts for posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,6 @@ $(function() {
 </script>
 
 
-
+<script id="dsq-count-scr" src="//riffomonas.disqus.com/count.js" async></script>
 	</body>
 </html>
