--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,7 +6,7 @@ layout: default
 
   <h1 id="{{page.title | slugify }}">{{ page.title }}</h1>
 
-  <p class="meta">{{ page.date | date: "%B %-d, %Y" }} • {% include time.html %}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %} • {% include reading_speed.html %} • {% include github_link.html %} • {% include twitter_plug.html %}</p>
+  <p class="meta">{{ page.date | date: "%B %-d, %Y" }}{% if page.time %} • {% include time.html %}{% endif %}{% if page.author %} • {{ page.author }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %} • {% include reading_speed.html %} • {% include github_link.html %} • {% include twitter_plug.html %}</p>
 
   {{ content }}
 
