--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,8 +16,8 @@
 	        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 	          <li class="dropdown-item"><a href="{{site.url}}/reproducible_research/">Reproducible Research</a></li>
 	          <li class="dropdown-item"><a href="{{site.url}}/minimalR/">minimalR</a></li>
-	          <li class="dropdown-item"><a href="{{site.url}}/2018_asb/">2018 MLB All Star Break</a></li>
 	          <li class="dropdown-item"><a href="{{site.url}}/code_club/">Code Club</a></li>
+	          <li class="dropdown-item"><a href="{{site.url}}/live_streams/">Live Streams</a></li>
 	        </ul>
 	      </li>
 	      <li class="nav-item"><a class="nav-link" href="/about/">About</a></li>
