Improve header formatting

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -261,7 +261,8 @@ code {
   margin: 5px 0 40px;
 }
 
-.post-content h2 { margin-top: 2rem; }
+.post-content h2 { margin-top: 3rem; }
+.post-content h3 { margin-top: 2rem; font-size: 25px;}
 
 .post-content p { color: black; font-size: 18px; }
 
