Add generalR to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,7 @@
 	        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
 	          <li class="dropdown-item"><a href="{{site.url}}/reproducible_research/">Reproducible Research</a></li>
 	          <li class="dropdown-item"><a href="{{site.url}}/minimalR/">minimalR</a></li>
+	          <li class="dropdown-item"><a href="{{site.url}}/generalR/">generalR</a></li>
 	          <li class="dropdown-item"><a href="{{site.url}}/code_club/">Code Club</a></li>
 	          <li class="dropdown-item"><a href="{{site.url}}/live_streams/">Live Streams</a></li>
 	        </ul>
