--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -22,6 +22,7 @@ a { color:$my-blue; }
 	background: url(/assets/images/replication.jpg) center center no-repeat;
 	background-size: cover;
 	color: #fff;
+	padding-bottom: 20px;
 
 	.message {
 		margin: 50px;
@@ -89,7 +90,7 @@ a { color:$my-blue; }
 
 	p{
 		line-height: 150%;
-		font-size: 20px;
+		font-size: 30px;
 	}
 
 	a {
