--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -226,7 +226,7 @@ pre code {
 
 code {
   font-size: 92%;
-  border: 1px solid #ccc;
+  // border: 1px solid #ccc;
   background-color: #F8F8F8;
 	white-space: pre;
 	word-break: normal;
