--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,8 @@
 
 	  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 	    <ul class="navbar-nav">
-	      <li class="nav-item dropdown">
+				<li class="nav-item"><a class="nav-link" href="/workshops/">Workshops</a></li>
+				<li class="nav-item dropdown">
 	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 	          Training modules
 	        </a>
