Fix styling for workshops

--- a/_layouts/workshop.html
+++ b/_layouts/workshop.html
@@ -11,7 +11,8 @@ layout: default
 
 	{{ content }}
 
-	<p>The workshop will be offered on {{ page.dates}}. Each day of the workshop will run {{ page.times }}. These times are based on the time in <a href="https://www.timeanddate.com/worldclock/usa/ann-arbor">Ann Arbor, MI</a>, which is in the Eastern Time Zone of the US.</p>
+	<p>The workshop will be offered on {{ page.dates}}. Each day of the workshop will run {{ page.times }}. These times are based on the time in <a href="https://www.timeanddate.com/worldclock/usa/ann-arbor">Ann Arbor, MI</a>, which is in the Eastern Time Zone of the US. Please feel free to <a href="mailto:pat@riffomonas.org">email me</a> if you have any questions. I'd love to have you participate in the next workshop!</p>
+
 
 	<div class="payment">
 
