--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
 		</button>
 
 	  <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-	    <ul class="navbar-nav align-items-center">
+	    <ul class="navbar-nav align-items-center text-center">
 				<li class="nav-item"><a class="nav-link" href="/workshops/">Upcoming<br>Workshops</a></li>
 				<li class="nav-item dropdown">
 	        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
